--- a/project.json
+++ b/project.json
@@ -4,8 +4,7 @@
   "description": "Extract text information from a template file and use it to fill in the placeholder text in a string using string activities.",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[24.10.6]",
-    "UiPath.Testing.Activities": "[24.10.3]"
+    "UiPath.System.Activities": "[24.10.6]"
   },
   "webServices": [],
   "entitiesStores": [],
